# MetAromaticCPP

./: .gitignore  README.md  compile.sh  from_cython_to_python.cpp  from_cython_to_python.pyx  met_aromatic.cpp  met_aromatic.h  met_aromatic_pyx.cpp  met_aromatic_pyx.pyx  setup.py  test.py  to_cython.cpp
src/: CMakeLists.txt  compile.sh  compile_cxx.sh  compile_cython.sh  cross_product_method.h  curl_pdb_files.cpp  curl_pdb_files.h  debug.h  distance_angular.h  distance_condition.h  example.py  get_aromatic_midpoints.h  linalg.h  met_aromatic.cpp  met_aromatic.h  met_aromatic_pyx.cpp  met_aromatic_pyx.pyx  precompute_aromatic_midpoints.h  precompute_lone_pairs.h  preprocessing.h  print.h  runner.py  setup.py  structs.h  test.py  test_data.json  test_data_1000.json  test_data_invalid_results.json  test_data_valid_results.json  test_errors.py  test_results.py  threaded.py
src/include/: curl_pdb_files.h  distance_angular.h  exit_codes.h  help.h  linalg.h  precompute_aromatic_midpoints.h  precompute_lone_pairs.h  preprocessing.h  print_results.h
